Add file handling examples and best practices to lezione5.ipynb

--- a/lezione5.ipynb
+++ b/lezione5.ipynb
@@ -247,11 +247,68 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c6f201b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = open('dog_breeds.txt')"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "e9c3fd80",
+   "id": "e44aec9f",
    "metadata": {},
    "source": [
-    "Per leggere i dati"
+    "> *Warning:* You should always make sure that an open file is properly closed.\n",
+    "\n",
+    "It’s important to remember that it’s your responsibility to close the file. In most cases, upon termination of an application or script, a file will be closed eventually. However, there is no guarantee when exactly that will happen. This can lead to unwanted behavior including resource leaks. It’s also a best practice within Python (Pythonic) to make sure that your code behaves in a way that is well defined and reduces any unwanted behavior.\n",
+    "\n",
+    "When you’re manipulating a file, there are two ways that you can use to ensure that a file is closed properly, even when encountering an error. The first way to close a file is to use the try-finally block:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "374bf879",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reader = open('dog_breeds.txt')\n",
+    "try:\n",
+    "    # Further file processing goes here\n",
+    "finally:\n",
+    "    reader.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57e15c9c",
+   "metadata": {},
+   "source": [
+    "Ma il miglior modo è:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31279bf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('dog_breeds.txt') as reader:\n",
+    "    # Further file processing goes here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "346411e5",
+   "metadata": {},
+   "source": [
+    "The with statement automatically takes care of closing the file once it leaves the with block, even in cases of error. I highly recommend that you use the with statement as much as possible, as it allows for cleaner code and makes handling any unexpected errors easier for you.\n",
+    "\n",
+    "Most likely, you’ll also want to use the second positional argument, mode. This argument is a string that contains multiple characters to represent how you want to open the file. The default and most common is 'r', which represents opening the file in read-only mode as a text file:"
    ]
   },
   {
@@ -283,6 +340,29 @@
     "with open('data.txt', 'w') as f:\n",
     "    data = 'some data to be written to the file'\n",
     "    f.write(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2dc3499",
+   "metadata": {},
+   "source": [
+    "Character\tMeaning\n",
+    "- 'r'\tOpen for reading (default)\n",
+    "- 'w'\tOpen for writing, truncating (overwriting) the file first\n",
+    "- 'rb' or 'wb'\tOpen in binary mode (read/write using byte data)\n",
+    "\n",
+    "\n",
+    "Let’s go back and talk a little about file objects. A file object is:\n",
+    "\n",
+    ">“an object exposing a file-oriented API (with methods such as read() or write()) to an underlying resource.” (Source)\n",
+    "\n",
+    "There are three different categories of file objects:\n",
+    "\n",
+    "Text files\n",
+    "Buffered binary files\n",
+    "Raw binary files\n",
+    "Each of these file types are defined in the io module. Here’s a quick rundown of how everything lines up."
    ]
   },
   {
