Implement code changes to enhance functionality and improve performance

--- a/lezione5.ipynb
+++ b/lezione5.ipynb
@@ -367,6 +367,206 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4866ed37",
+   "metadata": {},
+   "source": [
+    "**Tipi di file e oggetti restituiti da `open()`**  \n",
+    "\n",
+    "1. **File di testo**  \n",
+    "   - Apertura:  \n",
+    "     ```python\n",
+    "     open('abc.txt')         # default: lettura in testo\n",
+    "     open('abc.txt', 'r')    # lettura\n",
+    "     open('abc.txt', 'w')    # scrittura (sovrascrive)\n",
+    "     ```  \n",
+    "   - Oggetto restituito:  \n",
+    "     ```python\n",
+    "     <class '_io.TextIOWrapper'>\n",
+    "     ```  \n",
+    "   - Serve per leggere/scrivere caratteri (stringhe).\n",
+    "\n",
+    "2. **File binari bufferizzati**  \n",
+    "   - Apertura:  \n",
+    "     ```python\n",
+    "     open('abc.bin', 'rb')   # lettura in binario\n",
+    "     open('abc.bin', 'wb')   # scrittura in binario\n",
+    "     ```  \n",
+    "   - Oggetto restituito:  \n",
+    "     - Lettura: `<class '_io.BufferedReader'>`  \n",
+    "     - Scrittura: `<class '_io.BufferedWriter'>`  \n",
+    "   - Utile per file non testuali (immagini, eseguibili, ecc.).\n",
+    "\n",
+    "3. **File “raw”**  \n",
+    "   - Apertura in low-level, senza buffer:  \n",
+    "     ```python\n",
+    "     open('abc.bin', 'rb', buffering=0)\n",
+    "     ```  \n",
+    "   - Oggetto restituito:  \n",
+    "     ```python\n",
+    "     <class '_io.FileIO'>\n",
+    "     ```  \n",
+    "   - Raramente usato direttamente, serve come base per le stream di livello superiore.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Lettura di file aperti\n",
+    "\n",
+    "Su un oggetto file si possono chiamare diversi metodi:\n",
+    "\n",
+    "| Metodo                  | Comportamento                                                                                   |\n",
+    "|-------------------------|------------------------------------------------------------------------------------------------|\n",
+    "| `.read(size=-1)`        | Legge fino a `size` byte/caratteri; senza argomento (o `-1`) legge l’intero contenuto.          |\n",
+    "| `.readline(size=-1)`    | Legge fino a `size` caratteri dalla riga corrente; se la riga è più lunga continua fino a LF. |\n",
+    "| `.readlines()`          | Restituisce tutte le righe rimanenti come lista di stringhe.                                   |\n",
+    "\n",
+    "**Esempi**  \n",
+    "- Leggere tutto il file:  \n",
+    "  ```python\n",
+    "  with open('dog_breeds.txt', 'r') as f:\n",
+    "      testo = f.read()\n",
+    "  ```  \n",
+    "- Leggere 5 caratteri alla volta da una riga:  \n",
+    "  ```python\n",
+    "  with open('dog_breeds.txt', 'r') as f:\n",
+    "      print(f.readline(5))\n",
+    "      print(f.readline(5))\n",
+    "      # … e così via\n",
+    "  ```  \n",
+    "- Ottenere una lista di righe:  \n",
+    "  ```python\n",
+    "  righe = open('dog_breeds.txt').readlines()\n",
+    "  # oppure list(open('dog_breeds.txt'))\n",
+    "  ```\n",
+    "\n",
+    "### Iterazione per riga\n",
+    "- **Con `readline()` in while**  \n",
+    "  ```python\n",
+    "  with open('dog_breeds.txt', 'r') as f:\n",
+    "      line = f.readline()\n",
+    "      while line != '':\n",
+    "          print(line, end='')\n",
+    "          line = f.readline()\n",
+    "  ```\n",
+    "- **Con `readlines()` e for**  \n",
+    "  ```python\n",
+    "  for line in open('dog_breeds.txt').readlines():\n",
+    "      print(line, end='')\n",
+    "  ```\n",
+    "- **Modo più “pythonic”**  \n",
+    "  ```python\n",
+    "  with open('dog_breeds.txt', 'r') as f:\n",
+    "      for line in f:\n",
+    "          print(line, end='')\n",
+    "  ```\n",
+    "  È più efficiente in termini di memoria e prestazioni.\n",
+    "\n",
+    "> **Nota**: `print(..., end='')` evita che Python aggiunga un’ulteriore nuova riga.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Scrittura nei file\n",
+    "\n",
+    "Metodi principali su un oggetto file aperto in modalità scrittura o append:\n",
+    "\n",
+    "| Metodo           | Cosa fa                                                          |\n",
+    "|------------------|------------------------------------------------------------------|\n",
+    "| `.write(string)` | Scrive la stringa esattamente com’è (senza aggiungere `\\n`).     |\n",
+    "| `.writelines(i)` | Scrive ogni elemento di una sequenza; non aggiunge terminatori.  |\n",
+    "\n",
+    "**Esempio di reverse write**  \n",
+    "```python\n",
+    "with open('dog_breeds.txt', 'r') as r:\n",
+    "    righe = r.readlines()\n",
+    "\n",
+    "with open('reversed.txt', 'w') as w:\n",
+    "    for riga in reversed(righe):\n",
+    "        w.write(riga)\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Lavorare con byte\n",
+    "\n",
+    "Aggiungendo la `b` alla modalità (`'rb'`, `'wb'`, `'ab'`) si ottengono/si scrivono oggetti di tipo `bytes` anziché stringhe:\n",
+    "\n",
+    "```python\n",
+    "with open('dog_breeds.txt', 'rb') as f:\n",
+    "    b = f.readline()\n",
+    "    # b sarà qualcosa come b'Pug\\n'\n",
+    "```\n",
+    "\n",
+    "### Esempio: header di un file PNG  \n",
+    "Il formato PNG ha un’intestazione di 8 byte fissi:\n",
+    "\n",
+    "| Byte letti       | Significato                          |\n",
+    "|------------------|--------------------------------------|\n",
+    "| `0x89`           | “magic number” inizio PNG           |\n",
+    "| `0x50 0x4E 0x47` | ASCII “PNG”                         |\n",
+    "| `0x0D 0x0A`      | CR+LF (DOS-style line ending)      |\n",
+    "| `0x1A`           | EOF stile DOS                       |\n",
+    "| `0x0A`           | LF (Unix-style line ending)        |\n",
+    "\n",
+    "```python\n",
+    "with open('jack_russell.png', 'rb') as f:\n",
+    "    print(f.read(1))   # b'\\x89'\n",
+    "    print(f.read(3))   # b'PNG'\n",
+    "    print(f.read(2))   # b'\\r\\n'\n",
+    "    print(f.read(1))   # b'\\x1a'\n",
+    "    print(f.read(1))   # b'\\n'\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Conclusioni**  \n",
+    "- Scegliere il tipo di apertura (`'r'`, `'w'`, `'a'`, con o senza `b`) in base al formato dei dati.  \n",
+    "- Per leggere: `.read()`, `.readline()`, `.readlines()` e, idealmente, iterare direttamente sull’oggetto file.  \n",
+    "- Per scrivere: `.write()` e `.writelines()`.  \n",
+    "- Quando si lavora a basso livello (raw), si usa `buffering=0`, ma è raro.  \n",
+    "- Nei file binari, tutte le operazioni restituiscono o accettano `bytes`, non stringhe."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "152be52e",
+   "metadata": {},
+   "source": [
+    "**Aggiungere dati a un file**  \n",
+    "Per aprire un file in modalità “append” (ossia scrivere alla fine senza sovrascrivere il contenuto esistente), si usa il flag `'a'`:\n",
+    "\n",
+    "```python\n",
+    "with open('dog_breeds.txt', 'a') as a_writer:\n",
+    "    a_writer.write('\\nBeagle')\n",
+    "```\n",
+    "\n",
+    "Dopo questa operazione, il file `dog_breeds.txt` conterrà all’ultima riga “Beagle” senza modificare le righe precedenti.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Lavorare contemporaneamente con due file**  \n",
+    "Se serve leggere da un file e scrivere il risultato in un altro in un unico blocco `with`, si possono aprire entrambi i file separati da virgola:\n",
+    "\n",
+    "```python\n",
+    "d_path   = 'dog_breeds.txt'\n",
+    "d_r_path = 'dog_breeds_reversed.txt'\n",
+    "\n",
+    "with open(d_path,   'r') as reader, \\\n",
+    "     open(d_r_path, 'w') as writer:\n",
+    "    dog_breeds = reader.readlines()\n",
+    "    writer.writelines(reversed(dog_breeds))\n",
+    "```\n",
+    "\n",
+    "- **Lettura**: `reader.readlines()` legge tutte le righe in una lista.  \n",
+    "- **Scrittura**: `writer.writelines(...)` scrive le righe nell’ordine inverso in `dog_breeds_reversed.txt`.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Riassunto**  \n",
+    "- Per aggiungere testo alla fine di un file senza cancellarne il contenuto, apri il file con modalità `'a'`.  \n",
+    "- Per operazioni di lettura e scrittura su file diversi in un unico contesto `with`, elenca entrambi i file separati da virgola, poi usa `readlines()` e `writelines()` (o altri metodi) per trasferire o trasformare i dati."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1f5de590",
    "metadata": {},
    "source": [
@@ -916,7 +1116,8 @@
     "- Python Crash Course, 2nd Edition: A Hands-On, Project-Based Introduction to Programming - Eric Matthes\n",
     "- https://realpython.com/python-exceptions/\n",
     "- https://realpython.com/read-write-files-python/\n",
-    "- https://realpython.com/working-with-files-in-python/"
+    "- https://realpython.com/working-with-files-in-python/\n",
+    "- https://realpython.com/why-close-file-python/"
    ]
   }
  ],
