Add inheritance examples and student class exercise to lezione5.ipynb

--- a/lezione5.ipynb
+++ b/lezione5.ipynb
@@ -161,13 +161,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "79c0f4ee",
+   "metadata": {},
+   "source": [
+    "In Python l’**inheritance** (ereditarietà) ti permette di definire una classe “figlio” che riutilizza e specializza comportamenti di una classe “madre”. I vantaggi principali sono:\n",
+    "\n",
+    "1. **Riuso del codice** – la classe figlia eredita attributi e metodi della madre senza riscriverli.  \n",
+    "2. **Estensione** – puoi aggiungere nuovi attributi/metodi.  \n",
+    "3. **Override** – puoi ridefinire (sovrascrivere) metodi della madre per comportamenti specifici.  \n",
+    "4. **Polimorfismo** – un’istanza di classe figlia può essere usata come se fosse della classe madre, semplificando l’interfaccia.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Esempio\n",
+    "\n",
+    "- `class Auto(Veicolo):` dichiara che `Auto` eredita da `Veicolo`.  \n",
+    "- `super().__init__(...)` richiama il costruttore della classe madre per inizializzare gli attributi comuni.  \n",
+    "- Override di `descrizione`: il metodo della figlia sostituisce quello della madre, ma può comunque invocarlo via `super()`.  \n",
+    "\n",
+    "In questo modo costruisci gerarchie di classi condividendo funzionalità comuni e specializzando solo ciò che serve."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79c0f4ee",
+   "id": "6c152307",
    "metadata": {},
    "outputs": [],
    "source": [
-    "    "
+    "class Veicolo:\n",
+    "    def __init__(self, marca: str, modello: str):\n",
+    "        self.marca = marca\n",
+    "        self.modello = modello\n",
+    "\n",
+    "    def descrizione(self) -> str:\n",
+    "        return f\"{self.marca} {self.modello}\"\n",
+    "\n",
+    "    def suona_clacson(self):\n",
+    "        print(\"Beep beep!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31711f9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Classe figlia:\n",
+    "class Auto(Veicolo):\n",
+    "    def __init__(self, marca: str, modello: str, porte: int):\n",
+    "        super().__init__(marca, modello)    # richiama il costruttore di Veicolo\n",
+    "        self.porte = porte\n",
+    "\n",
+    "    # aggiungo un nuovo metodo\n",
+    "    def numero_porte(self) -> int:\n",
+    "        return self.porte\n",
+    "\n",
+    "    # override del metodo descrizione\n",
+    "    def descrizione(self) -> str:\n",
+    "        base = super().descrizione()        # uso il metodo della madre\n",
+    "        return f\"{base}, {self.porte} porte\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d59fa42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v = Veicolo(\"Fiat\", \"500\")\n",
+    "print(v.descrizione())    # “Fiat 500”\n",
+    "v.suona_clacson()         # “Beep beep!”\n",
+    "\n",
+    "a = Auto(\"Tesla\", \"Model 3\", 4)\n",
+    "print(a.descrizione())    # “Tesla Model 3, 4 porte”\n",
+    "a.suona_clacson()         # eredita “Beep beep!”"
    ]
   },
   {
@@ -183,7 +254,36 @@
    "id": "066b5089",
    "metadata": {},
    "source": [
-    "Modifica Andrea"
+    "\n",
+    "## Traccia d’esercizio: Gestione di uno “Studente” (funziona anche con i pazienti)\n",
+    "\n",
+    "### Obiettivo\n",
+    "Creare una classe `Studente` che rappresenti uno studente universitario, con metodi per:\n",
+    "1. **aggiungere voti**  \n",
+    "2. **calcolare la media dei voti**  \n",
+    "3. **rappresentare lo studente come stringa**\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n",
+    "## Suggerimenti\n",
+    "\n",
+    "- **Controlli d’errore**: per validare il voto, usa un `if not (0 <= voto <= 30): raise ValueError(...)`.  \n",
+    "- **Calcolo della media**: ricorda che la somma di una lista di float diviso la lunghezza. Usa `sum(self.voti)/len(self.voti)` e gestisci il caso `len(self.voti)==0`.  \n",
+    "- **String formatting**: puoi usare f-string:  \n",
+    "  ```python\n",
+    "  return f\"Studente: {self.nome} {self.cognome} (Mat. {self.matricola}), Media voti: {media:.1f}\"\n",
+    "  ```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Come verificare se funziona\n",
+    "\n",
+    "- Assicurati che eseguendo:\n",
+    "  ```bash\n",
+    "  python studente.py\n",
+    "  ```\n",
+    "  appaiano le righe con le medie dei voti."
    ]
   },
   {
