Update patient readings output in lezione5.ipynb to include execution count and display results

--- a/lezione5.ipynb
+++ b/lezione5.ipynb
@@ -29,10 +29,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f83fe477",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temperature: 38°C\n",
+      "Temperature: 36°C\n",
+      "Temperature: 37.8°C\n",
+      "Temperature: 35.2°C\n"
+     ]
+    }
+   ],
    "source": [
     "# Liste, tuple, dizionari, set sono tutti iterabili\n",
     "patient_readings = [38, 36, 37.8, 35.2]\n",
