--- a/lezione6.ipynb
+++ b/lezione6.ipynb
@@ -205,11 +205,100 @@
     "\n",
     "{Grafico temporale con andamento di biomarcatori in un paziente nel tempo}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13c7388f",
+   "metadata": {},
+   "source": [
+    "# Numpy\n",
+    "\n",
+    "NumPy is a Python library that provides a simple yet powerful data structure: the n-dimensional array.\n",
+    "\n",
+    "**Perché scegliere NumPy**\n",
+    "Pur conoscendo già Python “puro” (con i suoi cicli `for`, la lettura/scrittura di CSV, ecc.), NumPy introduce un paradigma che offre vantaggi concreti:\n",
+    "\n",
+    "1. **Maggiore velocità**\n",
+    "\n",
+    "   * NumPy utilizza algoritmi implementati in C, che eseguono operazioni in nanosecondi anziché in secondi.\n",
+    "2. **Riduzione dei cicli**\n",
+    "\n",
+    "   * Grazie alle strutture array, è possibile comporre operazioni vettoriali che eliminano gran parte dei loop manuali e l’indice di iterazione.\n",
+    "3. **Codice più leggibile**\n",
+    "\n",
+    "   * Senza cicli annidati, le espressioni nel codice assomigliano molto di più alle equazioni matematiche che si vogliono calcolare.\n",
+    "4. **Alta qualità e affidabilità**\n",
+    "\n",
+    "   * Un’ampia comunità di sviluppatori mantiene NumPy veloce, di facile utilizzo e privo di bug.\n",
+    "\n",
+    "**Conclusione**\n",
+    "Questi fattori hanno reso NumPy lo standard “de facto” per gli array multidimensionali in Python applicato alla data science. Molte librerie popolari si basano su NumPy: impararlo fornisce una solida base su cui poi sviluppare competenze più avanzate in ambiti specifici.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f326570b",
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting numpy\n",
+      "  Using cached numpy-2.2.5-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (62 kB)\n",
+      "Using cached numpy-2.2.5-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (16.1 MB)\n",
+      "Installing collected packages: numpy\n",
+      "Successfully installed numpy-2.2.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "# attiviamo l'ambiente virutale\n",
+    ". .venv/bin/activate\n",
+    "# Installiamo numpy\n",
+    "pip install numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19fdaf34",
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "# installiamo matplotlib\n",
+    "pip install numpy matplotlib"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
