Enhance lezione6.ipynb with additional markdown cells for Pandas usage and typical applications

--- a/lezione6.ipynb
+++ b/lezione6.ipynb
@@ -2,18 +2,58 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "634a5750",
+   "metadata": {},
+   "source": [
+    "# Pandas 🐼🐼🐼"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcf5a308",
+   "metadata": {},
+   "source": [
+    "### Tipici usi della libreria"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "308c465a",
    "metadata": {},
    "source": [
     "| Esigenza tipica                                                  | Funzionalità Pandas                     | Quando serve                                                                |\n",
     "| ---------------------------------------------------------------- | --------------------------------------- | --------------------------------------------------------------------------- |\n",
-    "| 1. **Importare** formati eterogenei (CSV, Excel, TSV, JSON, SQL) | `read_*()`                              | Ogni volta che i dati provengono da laboratori, EHR, registry o dispositivi |\n",
-    "| 2. **Pulire** dati sporchi o parziali                            | `dropna`, `fillna`, `astype`, `replace` | Prima di qualsiasi statistica o ML                                          |\n",
-    "| 3. **Ristrutturare** il dataset                                  | `melt`, `pivot`, `stack/unstack`        | Per allineare misure longitudinali o matrici di espressione                 |\n",
-    "| 4. **Filtrare & sottogruppi**                                    | Boolean indexing, `query`, `groupby`    | Focus su un fenotipo, un trattamento, un gene                               |\n",
-    "| 5. **Aggregare & statistiche rapide**                            | `groupby().agg()`, `describe`           | Report clinici, cruscotti QC                                                |\n",
-    "| 6. **Merge/Join** di più fonti                                   | `merge`, `concat`                       | Integrare imaging + clinica + omics                                         |\n",
-    "| 7. **Time series**                                               | `to_datetime`, `resample`, `rolling`    | Wearable, follow-up, ICU waveform                                           |\n"
+    "| 1. **Importare** formati eterogenei (CSV, Excel, TSV, JSON, SQL) | `read_*()`                              | Ogni volta che i dati provengono da laboratori, EHR, registry o altri dispositivi |\n",
+    "| 2. **Pulire** dati sporchi o parziali                            | `dropna`, `fillna`, `astype`, `replace` | Prima di qualsiasi statistica o di usarli per Machine Learning                                          |\n",
+    "| 3. **Ristrutturare** il dataset (modificarne la struttura per facilitarne l’analisi o per adattarlo a specifiche esigenze)                                  | `melt`, `pivot`, `stack/unstack`        | Per allineare o sistemare misure longitudinali, matrici di espressione...                 |\n",
+    "| 4. **Filtrare & creare sottogruppi**                                    | Boolean indexing, `query`, `groupby`    | Focus su un fenotipo, un trattamento, un gene...                               |\n",
+    "| 5. **Aggregare & statistiche rapide**                            | `groupby().agg()`, `describe`           | Report clinici, cruscotti QC (Quality Control)...                                                |\n",
+    "| 6. **Merge/Join** di più fonti                                   | `merge`, `concat`                       | Integrare imaging + clinica + omics (Dati omici → Genomica, trascrittomica, proteomica, metabolomica)                                         |\n",
+    "| 7. **Time series per il monitoraggio continuo**                                               | `to_datetime`, `resample`, `rolling`    | Wearable, follow-up, Analisi di segnali continui in terapia intensiva (ICU waveform analysis)...                                           |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eeac1d46",
+   "metadata": {},
+   "source": [
+    "### Perché non basta usare liste Python o array NumPy al posto di Pandas?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c35f5f71",
+   "metadata": {},
+   "source": [
+    "| Esigenza tipica nei dati biomedici                     | Liste Python                                | NumPy array                                           | Pandas DataFrame                                |\n",
+    "| ------------------------------------------------------ | ------------------------------------------- | ----------------------------------------------------- | ----------------------------------------------- |\n",
+    "| **Etichette (ID paziente, nome gene, tempo)**          | ❌ gestite “a mano” con strutture ausiliarie | ❌ non esistono; solo indici interi                    | ✅ `index`, `columns`, gerarchici (`MultiIndex`) |\n",
+    "| **Dati eterogenei** (numeri + stringhe + date)         | ✅ ma zero funzioni vettoriali               | ⚠️ possibile con `dtype=object`, ma perde performance | ✅ colonne con tipi diversi, ottimizzate         |\n",
+    "| **Valori mancanti** (`NaN`, `None`, sentinel)          | ❌ serve logica ad-hoc                       | ⚠️ `np.nan` solo per float; complicato per tipi misti | ✅ `isna`, `fillna`, propagazione coerente       |\n",
+    "| **Operazioni “SQL-like”** (`groupby`, `join`, `pivot`) | ❌ codice manuale e ciclo esplicito          | ❌ non previste                                        | ✅ una riga di codice idiomatica                 |\n",
+    "| **Time series** (resample, rolling window)             | ❌ da implementare                           | ⚠️ serve `np.searchsorted`/for loop                   | ✅ API dedicate (`resample`, `rolling`, `shift`) |\n",
+    "| **I/O nativo** (CSV, Excel, SQL, Parquet)              | ❌ librerie esterne, parsing manuale         | ❌ idem                                                | ✅ `read_*`, `to_*` one-liner                    |\n",
+    "| **Leggibilità notebook/paper**                         | 😐 spesso 3-4 strutture parallele           | 😐 array “senza volto”                                | 😀 tabelle auto-formattate                      |\n"
    ]
   },
   {
@@ -30,10 +70,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0190fa75",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      2\u001b[39m df = pd.read_csv(\u001b[33m\"\u001b[39m\u001b[33mregistry_diabete.csv\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      3\u001b[39m df[\u001b[33m\"\u001b[39m\u001b[33mdiagnosi\u001b[39m\u001b[33m\"\u001b[39m] = df[\u001b[33m\"\u001b[39m\u001b[33mdiagnosi\u001b[39m\u001b[33m\"\u001b[39m].str.upper().str.strip()  \u001b[38;5;66;03m# normalizzo\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv(\"registry_diabete.csv\")\n",
@@ -204,81 +256,6 @@
     "- Calcolo della progressione (delta valori nel tempo)\n",
     "\n",
     "{Grafico temporale con andamento di biomarcatori in un paziente nel tempo}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "13c7388f",
-   "metadata": {},
-   "source": [
-    "# Numpy\n",
-    "\n",
-    "NumPy is a Python library that provides a simple yet powerful data structure: the n-dimensional array.\n",
-    "\n",
-    "**Perché scegliere NumPy**\n",
-    "Pur conoscendo già Python “puro” (con i suoi cicli `for`, la lettura/scrittura di CSV, ecc.), NumPy introduce un paradigma che offre vantaggi concreti:\n",
-    "\n",
-    "1. **Maggiore velocità**\n",
-    "\n",
-    "   * NumPy utilizza algoritmi implementati in C, che eseguono operazioni in nanosecondi anziché in secondi.\n",
-    "2. **Riduzione dei cicli**\n",
-    "\n",
-    "   * Grazie alle strutture array, è possibile comporre operazioni vettoriali che eliminano gran parte dei loop manuali e l’indice di iterazione.\n",
-    "3. **Codice più leggibile**\n",
-    "\n",
-    "   * Senza cicli annidati, le espressioni nel codice assomigliano molto di più alle equazioni matematiche che si vogliono calcolare.\n",
-    "4. **Alta qualità e affidabilità**\n",
-    "\n",
-    "   * Un’ampia comunità di sviluppatori mantiene NumPy veloce, di facile utilizzo e privo di bug.\n",
-    "\n",
-    "**Conclusione**\n",
-    "Questi fattori hanno reso NumPy lo standard “de facto” per gli array multidimensionali in Python applicato alla data science. Molte librerie popolari si basano su NumPy: impararlo fornisce una solida base su cui poi sviluppare competenze più avanzate in ambiti specifici.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "f326570b",
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting numpy\n",
-      "  Using cached numpy-2.2.5-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (62 kB)\n",
-      "Using cached numpy-2.2.5-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (16.1 MB)\n",
-      "Installing collected packages: numpy\n",
-      "Successfully installed numpy-2.2.5\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%bash\n",
-    "# attiviamo l'ambiente virutale\n",
-    ". .venv/bin/activate\n",
-    "# Installiamo numpy\n",
-    "pip install numpy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19fdaf34",
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "# installiamo matplotlib\n",
-    "pip install numpy matplotlib"
    ]
   }
  ],
