Recovered lost code, added nbdime setting to .gitattributes

--- a/lezione6.ipynb
+++ b/lezione6.ipynb
@@ -278,7 +278,8 @@
    "source": [
     "%%bash\n",
     "# installiamo matplotlib\n",
-    "pip install numpy matplotlib"
+    "pip install numpy matplotlib\n",
+    "#"
    ]
   }
  ],
